Sun Jul  3 04:50:08 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c (get_stack): add to a care of gurad page on Mac
	  OS X. [Bug #1813] [ruby-core:24540]
	* signal.c (ruby_signal): SIGBUS use alternative stack too.
	* signal.c (sigbus): On Mac, thread stack overflow makes SIGBUS
	  instead of SIGSEGV. thus, added stackoverflow check.
	* signal.c (default_handler): get rid of compilation warning.
	* signal.c (Init_signal): ditto.

Sat Jul 02 08:59:20 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* test/openssl/test_ocsp.rb
	* test/openssl/test_x509_cert.rb: Perform SHA-256 tests only if
	  supported by the available OpenSSL version. Versions < 0.9.8 don't
	  support it. [ruby-core:37724]

Sat Jul  2 07:17:45 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_reject_bang, rb_ary_delete_if): rejected
	  elements should be removed.  fixed [Bug #2545]

Sat Jul  2 01:57:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* NEWS: remove a description of Kernel#respond_to? because it has
	  been reverted at revision 28564.

Sat Jul  2 00:58:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* NEWS: describe a change of multiplication of Bignum.

Fri Jul  1 18:52:31 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* benchmark/bm_app_erb.rb: increase loop count. too short
	  mesurement time makes less accuracy.
	* benchmark/bm_app_factorial.rb: ditto.
	* benchmark/bm_app_mandelbrot.rb: ditto.
	* benchmark/bm_app_strconcat.rb: ditto.

	* benchmark/bm_io_file_create.rb: ditto.
	* benchmark/bm_io_file_read.rb: ditto.
	* benchmark/bm_io_file_write.rb: ditto.

	* benchmark/bm_so_concatenate.rb: ditto.
	* benchmark/bm_so_lists.rb: ditto.
	* benchmark/bm_so_matrix.rb: ditto.
	* benchmark/bm_so_random.rb: ditto.
	* benchmark/bm_so_sieve.rb: ditto.

	* benchmark/bm_vm_thread_mutex1.rb: ditto.
	* benchmark/bm_vm_thread_mutex2.rb: ditto.
	* benchmark/bm_vm_thread_mutex3.rb: ditto.

	* benchmark/bm_vm1_block.rb: cleanup.